--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -2,7 +2,7 @@
     
   <div class="navbar-brand">
     
-    <%=  link_to root_path, class: "navbar-item"  do %>
+    <%=  link_to stories_path, class: "navbar-item"  do %>
         <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
     <% end %>
       
