--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -2,12 +2,14 @@
   <%= link_to "登入", new_session_path(resource_name),  class: "button is-primary" %><br />
 <% end %>
 
+<hr>
+
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "註冊", new_registration_path(resource_name), class: "button is-light" %><br />
+  <%= link_to "註冊", new_registration_path(resource_name), class: "button is-info" %>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "忘記密碼?", new_password_path(resource_name) %><br />
+  <%= link_to "忘記密碼?", new_password_path(resource_name), class: "button is-danger"%><br />
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
