--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,11 @@
  *= require bulma/bulma.css
  *= require_self
  */
+
+.navbar-link{
+
+    .user-avatar{
+        border-radius: 50%;
+        margin-right: 5px;
+    }
+}
