--- a/app/frontendsource/stylesheets/stories.scss
+++ b/app/frontendsource/stylesheets/stories.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the stories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.navbar-link{
+
+    .user-avatar{
+        border-radius: 50%;
+        margin-right: 5px;
+    }
+}
