comment-related finished

--- a/app/frontendsource/stylesheets/stories.scss
+++ b/app/frontendsource/stylesheets/stories.scss
@@ -83,7 +83,13 @@ form {
             padding: 1em 1.4em;
             margin-top: 8px;
             margin-bottom: 1em;
+
+            p{
+                color: gray;
+            }
         }
+
+
     }
     
 }
