--- a/app/views/pages/_comment_area.html.erb
+++ b/app/views/pages/_comment_area.html.erb
@@ -1,11 +1,13 @@
 <section class="comment-editor">
 
     <% if user_signed_in? %>
-        <form action="" method="post">
-            <textarea name="" id="" rows="8" cols="40" class="textarea is-small"></textarea>
-            <button type="submit" class="button is-primary is-fullwidth">送出</button>
-        </form>
+        <%= form_with model: comment, url: story_comments_path(story), class:"comment_form" ,remote: true do |form| %>
+            <%= form.text_area :content, rows: 5,  class:"textarea" %>
+            <%= form.button '送出留言', class: "button is-primary is-fullwidth" %>
+        <% end %>
+
     <% else %>
+
         <div class="field">    
             <%= link_to "註冊會員", new_user_registration_path, method: "get", class: "button is-success"%>
             <%= link_to "請先登入", user_registration_path, method: "patch", class: "button is-info" %>
