like api bug fix

--- a/app/frontendsource/stylesheets/stories.scss
+++ b/app/frontendsource/stylesheets/stories.scss
@@ -44,6 +44,11 @@ form {
                 color: white;
             }
         }
+
+        .bookmark-button{
+            margin-left: 2em;
+            font-size: 30px;
+        }
     }
 
     // 主文
