setting turbo-links control no cache

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,11 @@
     <title>My Medium</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <!--  stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'  -->   
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <meta name="turbolinks-cache-control" content="no-cache">
   
   </head>
 
