--- a/app/views/users/pricing.html.erb
+++ b/app/views/users/pricing.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
   
     <div class="columns">
-        
+
         <!-- left side -->
         <div class="column is-4 is-offset-2">
             
@@ -33,8 +33,8 @@
                     <div class="content">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. 
                     </div>
- 
-                    <a href="#" class="button is-danger is-fullwidth">購買</a>
+
+                    <%= link_to "購買", payment_users_path(type: 'VIP'), class: "button is-danger is-fullwidth" %>
                 </div>
             </div>      
         </div>
@@ -70,7 +70,8 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
                     </div>
                     
-                    <a href="#" class="button is-success is-fullwidth">購買</a>
+                    <%= link_to "購買", payment_users_path(type: 'platinum'), class: "button is-success is-fullwidth" %>
+
                 </div>
 
             </div>
