begore paypal SDK setting finished

--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -14,7 +14,7 @@
 
       <div class="content">
       
-        <strong></span>
+        <strong><%= @payment_type %> USD <%= @fee %></span>
       
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
