--- a/app/views/users/pricing.html.erb
+++ b/app/views/users/pricing.html.erb
@@ -25,7 +25,7 @@
                  
                         <div class="media-content">
                             <p class="title is-4">VIP 會員</p>
-                            <p class="subtitle is-6">USD 10</p>
+                            <p class="subtitle is-6">USD <%= ENV["price_vip"] %></p>
                         </div>
                     </div>
  
@@ -34,7 +34,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. 
                     </div>
 
-                    <%= link_to "購買", payment_users_path(type: 'VIP'), class: "button is-danger is-fullwidth" %>
+                    <%= link_to "購買", payment_users_path(type: 'vip'), class: "button is-danger is-fullwidth" %>
                 </div>
             </div>      
         </div>
@@ -62,7 +62,7 @@
                         
                         <div class="media-content">
                             <p class="title is-4">白金會員</p>
-                            <p class="subtitle is-6">USD 20</p>
+                            <p class="subtitle is-6">USD <%= ENV["price_platinum"] %></p>
                         </div>
                     </div>
 
