--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -39,19 +39,16 @@
   <!-- 刷卡機表單 -->
   <%= form_with url: pay_users_path, id: "payment-form", method: "post", local:true do |form| %>
 
+    <%= form.hidden_field :payment_nonce %>
     <div id="dropin-container"></div>
     <%= link_to "重新考慮", pricing_users_path, class:"button is-primary" %>
     <button id="submit-button" class="button is-danger">結帳！</button>
 
   <% end %>
   
-  <!-- <form id="payment-form" action="/route/on/your/server" method="post"> -->
-    <!-- <div id="dropin-container"></div> -->
-    <!-- <input type="submit" /> -->
-    <!-- <input type="hidden" id="nonce" name="payment_method_nonce"/> -->
-  <!-- </form> -->
 
   <script type="text/javascript">
+
     document.addEventListener("turbolinks:load", function(event){
 
       braintree.dropin.create({
@@ -63,6 +60,21 @@
         
         .then((dropinInstance) => {
 
+          form.addEventListener('submit', (event) => {
+            
+              event.preventDefault();  
+              dropinInstance.requestPaymentMethod()
+                
+                .then((payload) => {
+                  document.getElementById('payment_nonce').value = payload.nonce;
+                  console.log(payload.nonce)
+                  form.submit();
+                })
+                
+                .catch((error) => { throw error; });
+
+          });
+
         })
         
         .catch((error) => {
@@ -71,6 +83,4 @@
 
     })
   </script>
-
-
 </body>
