--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -45,6 +45,8 @@
           
           <div class="navbar-item has-dropdown is-hoverable">
          
+            <%= content_tag :i, "", class: 'fas fa-crown has-text-primary' if current_user.vip_user? %>
+            <%= content_tag :i, "", class: 'fas fa-crown has-text-danger' if current_user.platinum_user? %>
             <a class="navbar-link"><%= avatar_tag( current_user, size: 50) %> <%= current_user.email %>, 你好</a>
             
             <div class="navbar-dropdown">
