--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Medium</title>
+    <title>哈哈姆特</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!--  stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'  -->   
